--- a/index.html
+++ b/index.html
@@ -52,15 +52,11 @@
         <script src="app.js"></script>
     <!-- </x-compile> -->
 
-    <!-- **CSS** -->
-<!--    <link rel="stylesheet" type="text/css" href="resources/css/tipped/tipped.css" />-->
-<!--    <link rel="stylesheet" type="text/css" href="resources/css/todo.css"/>-->
-
     <!-- **WHERE TO OPEN LINKS** -->
     <base target="_blank" />
 
     </head>
-    <body style="background-color: black">
+    <body>
         <script type="text/javascript" src="resources/js/tipped/tipped.js"></script>
     </body>
 </html>
